Product API: Paging and Get by Category